removed animated cursor, tried to fix drover font not wokring on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "drover"; /* Name your font */
-  src: url("././assets/fonts/drover/drover.ttf") format("ttf"); /* Adjust the path accordingly */
+  src: url("././assets/fonts/drover/drover.ttf") format("truetype"); /* Adjust the path accordingly */
   font-weight: normal; /* Set to 'bold' if you have a bold version */
   font-style: normal; /* Set to 'italic' if you have an italic version */
 }
